# scgs_home

backend/: pyproject.toml
backend/bookings/: serializers.py
backend/categories/: serializers.py
backend/config/: settings.py  urls.py
backend/direct_messages/: admin.py
backend/medias/: views.py
backend/rooms/: serializers.py  urls.py  views.py
backend/users/: views.py
front/: package-lock.json  package.json
front/src/: api.ts  router.tsx  types.d.ts
front/src/components/: Header.tsx  LoginModal.tsx  Room.tsx
front/src/routes/: BuildingManagement.tsx  Home.tsx  RoomDetail.tsx  UploadRoom.tsx
