[tool.poetry]
name = "airnb-clone-backend"
version = "0.1.0"
description = ""
authors = ["hyun"]
license = "MIT"
readme = "README.md"
packages = [{include = "airnb_clone_backend"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
