[tool.poetry]
name = "airnb-clone-backend"
version = "0.1.0"
description = ""
authors = ["hyun"]
license = "MIT"
readme = "README.md"
packages = [{include = "airnb_clone_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
django-environ = "^0.9.0"
djangorestframework = "^3.14.0"
pyjwt = "^2.6.0"
django-cors-headers = "^3.13.0"
django-summernote = "^0.8.20.0"
mysqlclient = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
